this is my second commit

--- a/hello.html
+++ b/hello.html
@@ -1,2 +1,4 @@
 every gonna be okay one day.
 no one with me, i take my fight only with me.
+hello my name is rahul khandelwal
+this is my test repo for learning purpose
